--- a/manifest.json
+++ b/manifest.json
@@ -10,8 +10,8 @@
 		    "matches": ["https://mail.google.com/*"],
 		    "run_at": "document_idle",
 			"js": ["contentScript.js"]
-	 	}
- 	],
-
+  	 	}
+   	],
+    "options_page": "options.html",
     "manifest_version": 2
   }
